--- a/ruoyi-ui/.env.staging
+++ b/ruoyi-ui/.env.staging
@@ -9,8 +9,8 @@ ENV = 'staging'
 # 若依管理系统/测试环境
 VUE_APP_BASE_API = '/stage-api'
 
+# API 地址
+VUE_APP_API_URL = 'http://localhost:5000'
+
 # 端口
 port = 50
-
-# API 地址
-API_URL = 'http://localhost:5000'
