--- a/ruoyi-ui/.env.development
+++ b/ruoyi-ui/.env.development
@@ -10,8 +10,9 @@ VUE_APP_BASE_API = '/dev-api'
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
 
+# API 地址
+VUE_APP_API_URL = 'http://localhost:5000'
+
 # 端口
 port = 50
 
-# API 地址
-API_URL = 'http://localhost:5000'
