--- a/ruoyi-ui/.env.production
+++ b/ruoyi-ui/.env.production
@@ -7,8 +7,8 @@ ENV = 'production'
 # 若依管理系统/生产环境
 VUE_APP_BASE_API = '/prod-api'
 
+# API 地址
+VUE_APP_API_URL = 'http://localhost:5000'
+
 # 端口
 port = 50
-
-# API 地址
-API_URL = 'http://localhost:5000'
