--- a/RuoYi.Web.Entry/appsettings.json
+++ b/RuoYi.Web.Entry/appsettings.json
@@ -12,13 +12,13 @@
   "ConnectionConfigs": [
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry_net2;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     },
     {
       "ConfigId": "slave",
-      "ConnectionString": "Server=localhost;Database=ry-vue;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry-vue;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     }
@@ -31,9 +31,6 @@
     "InstanceName": "ruoyi_net:"
   },
 
-  "AppSettings": {
-    "VirtualPath": "http://localhost:5000"
-  },
   "SpecificationDocumentSettings": {
     "DocumentTitle": "RuoYi.Net 规范化接口",
     "GroupOpenApiInfos": [
