--- a/RuoYi.Framework/RuoYi.Framework.csproj
+++ b/RuoYi.Framework/RuoYi.Framework.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -9,15 +9,15 @@
   <ItemGroup>
     <PackageReference Include="AspectCore.Abstractions" Version="2.4.0" />
     <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.4.0" />
-    <PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="4.8.8.42" />
-    <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="4.8.8.42" />
-    <PackageReference Include="Furion.Pure" Version="4.8.8.30" />
+    <PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="4.8.8.48" />
+    <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="4.8.8.48" />
+    <PackageReference Include="Furion.Pure" Version="4.8.8.48" />
     <PackageReference Include="Hardware.Info" Version="100.0.0" />
     <PackageReference Include="Lazy.Captcha.Core" Version="2.0.6" />
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.12" />
     <PackageReference Include="MiniExcel" Version="1.31.2" />
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
-    <PackageReference Include="SqlSugarCore" Version="5.1.4.107" />
+    <PackageReference Include="SqlSugarCore" Version="5.1.4.110" />
     <PackageReference Include="UAParser.Core" Version="4.0.2" />
   </ItemGroup>
 
