--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -33,7 +33,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/y_project/RuoYi-Vue.git"
+    "url": "https://gitee.com/wdyday/RuoYi.Net.git"
   },
   "dependencies": {
     "@riophae/vue-treeselect": "0.4.0",
