--- a/RuoYi.Web.Entry/appsettings.json
+++ b/RuoYi.Web.Entry/appsettings.json
@@ -12,7 +12,7 @@
   "ConnectionConfigs": [
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=localhost;Database=ry_net2;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     },
