--- a/RuoYi.Web.Entry/appsettings.json
+++ b/RuoYi.Web.Entry/appsettings.json
@@ -10,15 +10,21 @@
   },
   "AllowedHosts": "*",
   "ConnectionConfigs": [
+    //{
+    //  "ConfigId": "master",
+    //  "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
+    //  "DbType": "MySql",
+    //  "IsAutoCloseConnection": true
+    //},
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
-      "DbType": "MySql",
+      "ConnectionString": "Server=localhost;Database=ry_net;Uid=sa;Pwd=123456",
+      "DbType": "SqlServer",
       "IsAutoCloseConnection": true
     },
     {
       "ConfigId": "slave",
-      "ConnectionString": "Server=localhost;Database=ry-vue;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry-vue;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     }
