--- a/RuoYi.Web.Entry/appsettings.Development.json
+++ b/RuoYi.Web.Entry/appsettings.Development.json
@@ -6,5 +6,26 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "Information"
     }
-  }
+  },
+
+  "ConnectionConfigs": [
+    //{
+    //  "ConfigId": "master",
+    //  "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
+    //  "DbType": "MySql",
+    //  "IsAutoCloseConnection": true
+    //},
+    {
+      "ConfigId": "master",
+      "ConnectionString": "Server=101.200.73.13;Database=ry_net;Uid=zy;Pwd=Zy@2022!@#",
+      "DbType": "SqlServer",
+      "IsAutoCloseConnection": true
+    },
+    {
+      "ConfigId": "slave",
+      "ConnectionString": "Server=localhost;Database=ry-vue;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
+      "DbType": "MySql",
+      "IsAutoCloseConnection": true
+    }
+  ]
 }
