--- a/RuoYi.Web.Entry/appsettings.Development.json
+++ b/RuoYi.Web.Entry/appsettings.Development.json
@@ -17,7 +17,7 @@
     //},
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=101.200.73.13;Database=ry_net;Uid=zy;Pwd=Zy@2022!@#",
+      "ConnectionString": "Server=localhost;Database=ry_net;Uid=sa;Pwd=123456",
       "DbType": "SqlServer",
       "IsAutoCloseConnection": true
     },
