--- a/RuoYi.Framework/RuoYi.Framework.csproj
+++ b/RuoYi.Framework/RuoYi.Framework.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="MiniExcel" Version="1.31.2" />
     <PackageReference Include="RedisRateLimiting.AspNetCore" Version="1.0.9" />
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.6" />
     <PackageReference Include="SqlSugarCore" Version="5.1.4.112" />
     <PackageReference Include="UAParser.Core" Version="4.0.2" />
   </ItemGroup>
