--- a/RuoYi.Web.Entry/appsettings.Production.json
+++ b/RuoYi.Web.Entry/appsettings.Production.json
@@ -9,8 +9,9 @@
   },
   "ConnectionConfigs": [
     {
-      "ConnectionString": "Data Source=./Furion.db",
-      "DbType": "Sqlite",
+      "ConfigId": "master",
+      "ConnectionString": "Server=101.200.73.13;Database=ry_net;Uid=zy;Pwd=Zy@2022!@#",
+      "DbType": "SqlServer",
       "IsAutoCloseConnection": true
     }
   ]
