--- a/RuoYi.Web.Entry/appsettings.json
+++ b/RuoYi.Web.Entry/appsettings.json
@@ -49,5 +49,7 @@
     ],
     "RoutePrefix": "swagger-ui",
     "HideServers": true
-  }
+  },
+  // job白名单: Assembly 集合, 逗号分隔
+  "JobWhiteListAssembly": "RuoYi"
 }
