--- a/RuoYi.Web.Entry/appsettings.Development.json
+++ b/RuoYi.Web.Entry/appsettings.Development.json
@@ -9,18 +9,18 @@
   },
 
   "ConnectionConfigs": [
-    //{
-    //  "ConfigId": "master",
-    //  "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
-    //  "DbType": "MySql",
-    //  "IsAutoCloseConnection": true
-    //},
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=localhost;Database=ry_net;Uid=sa;Pwd=123456",
-      "DbType": "SqlServer",
+      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
+      "DbType": "MySql",
       "IsAutoCloseConnection": true
     },
+    //{
+    //  "ConfigId": "master",
+    //  "ConnectionString": "Server=localhost;Database=ry_net;Uid=zy;Pwd=Admin123456789",
+    //  "DbType": "SqlServer",
+    //  "IsAutoCloseConnection": true
+    //},
     {
       "ConfigId": "slave",
       "ConnectionString": "Server=localhost;Database=ry-vue;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
