支持内存缓存: CacheConfig.CacheType - Redis/Memory

--- a/RuoYi.Admin/appsettings.Production.json
+++ b/RuoYi.Admin/appsettings.Production.json
@@ -9,7 +9,7 @@
   "ConnectionConfigs": [
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
       "DbType": "SqlServer",
       "IsAutoCloseConnection": true
     }
