--- a/RuoYi.Data/RuoYi.Data.csproj
+++ b/RuoYi.Data/RuoYi.Data.csproj
@@ -15,6 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Enums\**" />
+    <EmbeddedResource Remove="Enums\**" />
+    <None Remove="Enums\**" />
+  </ItemGroup>
+
+  <ItemGroup>
 	<FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="SqlSugarCore" Version="5.1.4.112" />
   </ItemGroup>
