--- a/RuoYi.Admin/appsettings.json
+++ b/RuoYi.Admin/appsettings.json
@@ -19,12 +19,15 @@
       "IsAutoCloseConnection": true
     }
   ],
-  "RedisConfig": {
-    "Host": "localhost",
-    "Port": "6379",
-    "Database": 10,
-    "Password": "",
-    "InstanceName": "ruoyi_net:"
+  "CacheConfig": {
+      "CacheType": "Memory",    // 缓存类型: Redis/Memory, 当 CacheType: Redis时, RedisConfig有效
+      "RedisConfig": {
+        "Host": "localhost",
+        "Port": "6379",
+        "Database": 10,
+        "Password": "",
+        "InstanceName": "ruoyi_net:"
+      },
   },
 
   "Logging": {      
@@ -84,15 +87,38 @@
     // 文件路径 上传文件的文件夹名称
     "Profile": "upload",
     // 获取ip地址开关
-    "AddressEnabled": false,
-    // 验证码类型 math 数字计算 char 字符验证
-    "CaptchaType": "math"
+    "AddressEnabled": false
   },
   "UserConfig": {
     // 密码最大错误次数
     "MaxRetryCount": 5,
     // 密码锁定时间（默认10分钟）
     "LockTime": 10
+  },
+  // 验证码配置
+  // 参考: https://github.com/pojianbing/LazyCaptcha/blob/master/README.md
+  "CaptchaOptions": {
+      // 验证码类型: 0-默认(英文字符大小写，数字混合), 1-中文, 2-数字, 3-中文数字小写, 4-中文数字大写, 5-英文字符大小写混合
+      //             6-英文字符小写, 7-英文字符大写, 8-英文小写，数字混合, 9-英文大写，数字混合, 10-数字计算, 11-数字计算，中文
+      "CaptchaType": 10, 
+      "CodeLength": 1, // 验证码长度, 要放在CaptchaType设置后  当类型为算术表达式时，长度代表操作的个数, 例如2
+      "IgnoreCase": true, // 比较时是否忽略大小写
+      "StoreageKeyPrefix": "captcha_codes:", // 存储键前缀
+      "ImageOption": {
+          "Width": 150, // 验证码宽度
+          "Height": 50, // 验证码高度
+          "BubbleMinRadius": 5, // 气泡最小半径
+          "BubbleMaxRadius": 10, // 气泡最大半径
+          "BubbleCount": 1, // 气泡数量
+          "BubbleThickness": 1.0, // 气泡边沿厚度
+          "InterferenceLineCount": 2, // 干扰线数量
+          "FontSize": 32, // 字体大小
+          "FontFamily": "kaiti", // 包含actionj,epilog,fresnel,headache,lexo,prefix,progbot,ransom,robot,scandal,kaiti
+          "BackgroundColor": "#ffffff", // 验证码背景色
+          "ForegroundColors": "", //  颜色格式同BackgroundColor,多个颜色逗号分割，随机选取。不填，空值，则使用默认颜色集
+          "Quality": 100, // 图片质量（质量越高图片越大，gif调整无效可能会更大）
+          "TextBold": true // 粗体
+      }
   },
 
   "JWTSettings": {
