角色验证: [AppRoleAuthorize("admin")]

--- a/RuoYi.Admin/appsettings.json
+++ b/RuoYi.Admin/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionConfigs": [
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     },
@@ -14,20 +14,20 @@
     //},
     {
       "ConfigId": "slave",
-      "ConnectionString": "Server=localhost;Database=ry-net2;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry-net2;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     }
   ],
   "CacheConfig": {
-      "CacheType": "Memory",    // 缓存类型: Redis/Memory, 当 CacheType: Redis时, RedisConfig有效
-      "RedisConfig": {
-        "Host": "localhost",
-        "Port": "6379",
-        "Database": 10,
-        "Password": "",
-        "InstanceName": "ruoyi_net:"
-      },
+    "CacheType": "Redis", // 缓存类型: Redis/Memory, 当 CacheType: Redis时, RedisConfig有效
+    "RedisConfig": {
+      "Host": "localhost",
+      "Port": "6379",
+      "Database": 10,
+      "Password": "",
+      "InstanceName": "ruoyi_net:"
+    }
   },
 
   "Logging": {      
