--- a/RuoYi.Admin/appsettings.Development.json
+++ b/RuoYi.Admin/appsettings.Development.json
@@ -10,7 +10,7 @@
   "ConnectionConfigs": [
     {
       "ConfigId": "master",
-      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     },
@@ -22,7 +22,7 @@
     //},
     {
       "ConfigId": "slave",
-      "ConnectionString": "Server=localhost;Database=ry_net2;Uid=root;Pwd=123456;AllowLoadLocalInfile=true;",
+      "ConnectionString": "Server=localhost;Database=ry_net2;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
     }
