remove slave connection

--- a/RuoYi.Admin/appsettings.Development.json
+++ b/RuoYi.Admin/appsettings.Development.json
@@ -20,11 +20,11 @@
     //  "DbType": "SqlServer",
     //  "IsAutoCloseConnection": true
     //},
-    {
-      "ConfigId": "slave",
-      "ConnectionString": "Server=localhost;Database=ry_net2;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
-      "DbType": "MySql",
-      "IsAutoCloseConnection": true
-    }
+    //{
+    //  "ConfigId": "slave",
+    //  "ConnectionString": "Server=localhost;Database=ry_net2;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
+    //  "DbType": "MySql",
+    //  "IsAutoCloseConnection": true
+    //}
   ]
 }
