update swagger package & [SwaggerIgnore] for [FromForm]

--- a/RuoYi.Admin/appsettings.json
+++ b/RuoYi.Admin/appsettings.json
@@ -48,7 +48,7 @@
         "Version": "1.0.0"
       }
     ],
-    "RoutePrefix": "swagger-ui",
+    "RoutePrefix": "api-doc",
     "HideServers": true
   },
   // job白名单: Assembly 集合, 逗号分隔
