--- a/RuoYi.Admin/appsettings.Production.json
+++ b/RuoYi.Admin/appsettings.Production.json
@@ -13,5 +13,9 @@
       "DbType": "SqlServer",
       "IsAutoCloseConnection": true
     }
-  ]
+  ],
+
+  "AppSettings": {
+    "InjectSpecificationDocument": false
+  }
 }
