--- a/RuoYi.Admin/appsettings.Development.json
+++ b/RuoYi.Admin/appsettings.Development.json
@@ -13,7 +13,7 @@
       "ConnectionString": "Server=localhost;Database=ry_net;Uid=root;Pwd=Admin123456789;AllowLoadLocalInfile=true;",
       "DbType": "MySql",
       "IsAutoCloseConnection": true
-    },
+    }
     //{
     //  "ConfigId": "master",
     //  "ConnectionString": "Server=localhost;Database=ry_net;Uid=zy;Pwd=123456",
@@ -26,5 +26,9 @@
     //  "DbType": "MySql",
     //  "IsAutoCloseConnection": true
     //}
-  ]
+  ],
+
+  "AppSettings": {
+    "InjectSpecificationDocument": true
+  }
 }
