"Profile": "upload" -> "Profile": "/upload"

--- a/RuoYi.Admin/appsettings.json
+++ b/RuoYi.Admin/appsettings.json
@@ -73,7 +73,7 @@
     // 实例演示开关
     "DemoEnabled": true,
     // 文件路径 上传文件的文件夹名称
-    "Profile": "upload",
+    "Profile": "/upload",
     // 获取ip地址开关
     "AddressEnabled": false
   },
