--- a/RuoYi.Admin/appsettings.Development.json
+++ b/RuoYi.Admin/appsettings.Development.json
@@ -29,6 +29,7 @@
   ],
 
   "AppSettings": {
-    "InjectSpecificationDocument": true
+    "InjectSpecificationDocument": true,
+    "InjectMiniProfiler": true
   }
 }
