--- a/RuoYi.Admin/appsettings.Production.json
+++ b/RuoYi.Admin/appsettings.Production.json
@@ -16,6 +16,7 @@
   ],
 
   "AppSettings": {
-    "InjectSpecificationDocument": false
+    "InjectSpecificationDocument": false,
+    "InjectMiniProfiler": false
   }
 }
